fix img overflow bug on Opera

--- a/_widget.scss
+++ b/_widget.scss
@@ -363,6 +363,7 @@ body > div > div > blockquote {
 #iine figure {
   line-height: 1;
   display: inline-block;
+  max-width: 100%;
 
   a {
     color: inherit;
